--- a/ui/src/main/resources/static/index.html
+++ b/ui/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="lib/chessboard-0.3.0.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/chessboard-1.0.0.min.css">
     <style>
         .board {
             width: 400px;
@@ -54,9 +54,9 @@
     <div id="move-history" class="move-history">
     </div>
 </div>
-<script src="lib/jquery-3.2.1.min.js"></script>
-<script src="lib/chessboard-0.3.0.min.js"></script>
-<script src="lib/chess.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/chessboard-js/1.0.0/chessboard-1.0.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
 <script src="index.js"></script>
 <script>
 </script>
